Fix icon alignment

--- a/src/components/PlatformTile.css
+++ b/src/components/PlatformTile.css
@@ -73,7 +73,7 @@
     content: "";
 }
 
-.card-platform-icon {
+.platform-tile-icon {
     padding: 0 0 10px 0;
 }
 
